--- a/app/globals.css
+++ b/app/globals.css
@@ -1,22 +1,25 @@
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
 :root {
-	--head-foreground: #000;
+	--head-foreground: #111827;
+	--sub-head-foreground: #374151;
+	--body-foreground: #191f2c;
 	--input-background: rgb(235, 231, 231);
-	--bg-foreground: #fff;
-	--card-background: #fff;
-	--accent-red: #f28b82;
-	--accent-blue: #aecbfa;
-	--accent-green: #a8d5ba;
-	--accent-yellow: #fddfaf;
+	--primary-green: #16a34a;
+	--primary-dark-green: #15803d;
+	--accent-blue: #2563eb;
 	--radius: 0.625rem;
 	--background: oklch(1 0 0);
 	--foreground: oklch(0.145 0 0);
 	--card: oklch(1 0 0);
 	--card-foreground: oklch(0.145 0 0);
+	--card-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+	--income-positive: #22c55e;
+	--expense-negative: #ef4444;
+	--warning: #f59e0b;
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.145 0 0);
 	--primary: oklch(0.205 0 0);
@@ -51,6 +54,11 @@
 	--color-foreground: var(--foreground);
 	--font-outfit: var(--font-outfit);
 	--font-quick-sand: var(--font-quick-sand);
+	--color-header: var(--head-foreground);
+	--color-sub-head: var(--sub-head-foreground);
+	--color-body: var(--body-foreground);
+	--color-brand-foreground: var(--primary-green);
+	--color-income: var(--income-positive);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -84,6 +92,7 @@
 	--radius-md: calc(var(--radius) - 2px);
 	--radius-lg: var(--radius);
 	--radius-xl: calc(var(--radius) + 4px);
+	--shadow-md: var(--card-shadow);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -127,10 +136,10 @@
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+	* {
+		@apply border-border outline-ring/50;
 	}
-  body {
-    @apply bg-background text-foreground;
+	body {
+		@apply bg-background text-foreground;
 	}
 }
