--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
 	--background: #060b1a;
 	--foreground: oklch(0.985 0 0);
 	--card: #161e30;
-	--card-foreground: oklch(0.145 0 0);
+	--card-foreground: oklch(0.985 0 0);
 	--card-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 	--income-positive: #22c55e;
 	--expense-negative: #ef4444;
@@ -31,10 +31,10 @@
 	--accent: oklch(0.97 0 0);
 	--accent-foreground: oklch(0.205 0 0);
 	--destructive: oklch(0.577 0.245 27.325);
-	--border: oklch(0.922 0 0);
+	--border: #161e30;
 	--input: oklch(0.922 0 0);
-	--ring: oklch(0.708 0 0);
-	--chart-1: oklch(0.646 0.222 41.116);
+	--ring: #111827;
+	--chart-1: #22c55e;
 	--chart-2: oklch(0.6 0.118 184.704);
 	--chart-3: oklch(0.398 0.07 227.392);
 	--chart-4: oklch(0.828 0.189 84.429);
